# aeron_udp_microservices

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RustExamples/: Cargo.toml
RustExamples/src/: basic_publisher.rs  basic_subscriber.rs
RustMicroservicesProject/: Cargo.toml
RustMicroservicesProject/schemas/: my_schema.fbs
RustMicroservicesProject/src/: my_schema_generated.rs  rustconsumer.rs  rustproducer.rs
src/: main.cpp
